Fixed header button styling on mobile and fixed settings buttons not appearing on mobile

--- a/src/app/[locale]/page.module.css
+++ b/src/app/[locale]/page.module.css
@@ -16,6 +16,7 @@
   --minor_inverting_filter_hover: invert(93%) sepia(11%) saturate(5067%) hue-rotate(319deg) brightness(96%) contrast(90%);
   --minor_filter: brightness(0) saturate(100%) invert(77%) sepia(42%) saturate(657%) hue-rotate(332deg) brightness(97%) contrast(94%);
   --minor_filter_hover: invert(89%) sepia(100%) saturate(46%) hue-rotate(326deg) brightness(111%) contrast(111%);
+  --white_filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(187deg) brightness(105%) contrast(101%);
 
   display: grid;
   grid-template-rows: 20px 1fr 20px;
@@ -41,6 +42,7 @@
   --minor_inverting_filter_hover: invert(93%) sepia(11%) saturate(5067%) hue-rotate(319deg) brightness(96%) contrast(90%);
   --minor_filter: brightness(0) saturate(100%) invert(77%) sepia(42%) saturate(657%) hue-rotate(332deg) brightness(97%) contrast(94%);
   --minor_filter_hover: invert(89%) sepia(100%) saturate(46%) hue-rotate(326deg) brightness(111%) contrast(111%);
+  --white_filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(187deg) brightness(105%) contrast(101%);
 
   display: grid;
   grid-template-rows: 20px 1fr 20px;
@@ -217,6 +219,58 @@
   color: var(--secondary-colour);
 }
 
+.settings_button a {
+  appearance: none;
+  border-radius: 64px;
+  height: 48px;
+  padding: 0 20px;
+  border: none;
+  border: 1px solid transparent;
+  transition:
+    background 0.1s,
+    color 0.1s,
+    border-color 0.1s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 500;
+}
+
+.settings_button a.major {
+  border-color: var(--secondary-colour);
+  background: var(--secondary-colour);
+  color: var(--tertiary-colour);
+  gap: 8px;
+}
+
+.settings_button a.major .inverting{
+  transition:
+    background 0.1s,
+    color 0.1s,
+    border-color 0.1s;
+  filter: var(--major_inverting_filter);
+  color: var(--tertiary-colour);
+}
+
+/* for the SVG */
+.settings_button a.major:hover .inverting {
+  transition:
+    background 0.1s,
+    color 0.1s,
+    border-color 0.1s;
+  filter: var(--major_inverting_filter_hover);
+  color: var(--secondary-colour);
+}
+
+.settings_button a.major:hover {
+  border-color: var(--tertiary-colour);
+  background: var(--tertiary-colour);
+  color: var(--secondary-colour);
+}
+
 .ctas a.minor{
   border-color: var(--secondary-colour);
   min-width: 125px;
@@ -247,13 +301,13 @@
   color: var(--tertiary-colour);
 }
 
-a.pdf_button {
+.ctas a.pdf_button {
   border-color:var(--secondary-colour);
   background-color: var(--tertiary-colour);
   border-radius: 6px;
   height: 400px;
   width: 250px;
-  color: #fff;
+  color: var(--tertiary-colour);
   display: grid;
   gap: 16px;
   grid-template-columns: auto;
@@ -261,10 +315,10 @@ a.pdf_button {
   text-align: center;
 }
 
-a.pdf_button:hover {
+.ctas a.pdf_button:hover {
   border-color: var(--secondary-colour);
   background-color: var(--secondary-colour);
-  color: #ffffff;
+  color: var(--tertiary-colour);
   gap: 16px;
   transition:
     background 0.1s,
@@ -289,10 +343,6 @@ a.pdf_button:hover {
   padding: 0 20px;
   border: none;
   border: 1px solid transparent;
-  transition:
-    background 0.1s,
-    color 0.1s,
-    border-color 0.1s;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -302,6 +352,20 @@ a.pdf_button:hover {
   font-weight: 500;
 }
 
+.ctas_mobile a.other {
+  border-color: var(--secondary-colour);
+  color: var(--secondary-colour);
+  background-color: var(--secondary-colour);
+}
+
+.ctas_mobile a.other:hover {
+  background-color: var(--tertiary-colour);
+  border-color: var(--tertiary-colour);
+}
+
+.ctas_mobile a.other .inverting{
+  filter: var(--white_filter);
+}
 
 .header {
   grid-row-start: 3;
@@ -450,6 +514,10 @@ a.pdf_button:hover {
   }
 
   a.pdf_button {
+    display: flex;
+  }
+
+  a.settings_button {
     display: flex;
   }
 }
